--- a/docs/create/kubernetes/index-kubernetes.mdx
+++ b/docs/create/kubernetes/index-kubernetes.mdx
@@ -17,7 +17,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 - A Linux system
 - curl, git, kubectl packages installed
 - A google account with Kubernetes Engine Admin role.
-- Install the latest cloud SK from [Installing the latest Cloud SDK version (313.0.1)](https://cloud.google.com/sdk/docs/quickstart#installing_the_latest_version)
+- Install the latest cloud SDK from [Installing the latest Cloud SDK version (313.0.1)](https://cloud.google.com/sdk/docs/quickstart#installing_the_latest_version)
 - Initializing the cloud SDK by [gcloud init](https://cloud.google.com/sdk/docs/quickstart#initializing_the) link
 
 
