--- a/docs/howtos/Moviesdatabase/getting-started/index-gettingstarted.mdx
+++ b/docs/howtos/Moviesdatabase/getting-started/index-gettingstarted.mdx
@@ -1,8 +1,8 @@
 ---
-id: index-intro
-title: 1. Introduction
-sidebar_label: 1. Introduction
-slug: /howtos/moviesdatabase/intro
+id: index-gettingstarted
+title: 1. Getting Started
+sidebar_label: 1. Getting Started
+slug: /howtos/moviesdatabase/getting-started
 ---
 
 [RediSearch](https://redisearch.io) is a real-time indexing and search engine.RediSearch provides a simple and fast way to index and query data using any field (secondary index), and do search and aggregation on an indexed dataset.
