Added images for Redis Movie Database

--- a/docs/develop/node/index-node.mdx
+++ b/docs/develop/node/index-node.mdx
@@ -12,7 +12,7 @@ import RedisCard from '@site/src/theme/RedisCard';
 
 Find tutorials, examples and technical articles that will help you to develop with Redis and Node.js/JavaScript.
 
-### Getting Started
+## Getting Started
 
 The Node.js community has built many client libraries that you can find [here](https://redis.io/clients#nodejs). 
 For your first steps with Node.js and Redis, this article will show how to use the recommended libraries: [ioredis](https://github.com/luin/ioredis) and [node-redis](https://github.com/NodeRedis/node-redis).
