--- a/docs/develop/rust/index-rust.mdx
+++ b/docs/develop/rust/index-rust.mdx
@@ -9,7 +9,18 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
+
+
 Find tutorials, examples and technical articles that will help you to develop with Redis and Rust.
+
+
+## Getting Started
+
+Rust community has built many client libraries that you can find here. For your first steps with Java and Rust, this article will show how to use a popula library: redis-rs
+The web page “Redis Enterprise and Rust” will help you to get started with Redis Enterprise and Rust in a much easier manner.
+redis-rs is a rust implementation of a Redis client library.
+It exposes a general purpose interface to Redis and also provides specific helpers for commonly used functionality.
+
 
 <Tabs
   defaultValue="redis-rs"
@@ -18,13 +29,7 @@ Find tutorials, examples and technical articles that will help you to develop wi
   ]}>
   <TabItem value="redis-rs">
 
-# Getting Started with redis-rs
-
-
-Rust community has built many client libraries that you can find here. For your first steps with Java and Rust, this article will show how to use a popula library: redis-rs 
-The web page “Redis Enterprise and Rust” will help you to get started with Redis Enterprise and Rust in a much easier manner.
-redis-rs is a rust implementation of a Redis client library. 
-It exposes a general purpose interface to Redis and also provides specific helpers for commonly used functionality.
+### Getting Started with Redis-rs
 
 1. Install Rust
 
