--- a/docs/howtos/FraudMitigation/index-fraudmitigation.mdx
+++ b/docs/howtos/FraudMitigation/index-fraudmitigation.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-fraudmitigation
-title: How to build Fraud detection system using Redis
-sidebar_label: How to build Fraud detection system using Redis
+title: How to build a Fraud detection system using Redis
+sidebar_label: How to build a Fraud detection system using Redis
 slug: /howtos/fraudmitigation
 ---
