--- a/docs/howtos/KnowledgeGraph/index-knowledgegraph.mdx
+++ b/docs/howtos/KnowledgeGraph/index-knowledgegraph.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-knowledgegraph
-title: Knowledge Graph
-sidebar_label: Knowledge Graph
+title: How to build a Knowledge Graph using Redis
+sidebar_label: How to build a Knowledge Graph using Redis
 slug: /howtos/knowledgegraph
 ---
