--- a/docs/howtos/Leaderboard/index-leaderboard.mdx
+++ b/docs/howtos/Leaderboard/index-leaderboard.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-leaderboard
-title: How to build a real-time leaderboard system using Redis
-sidebar_label: How to build a real-time leaderboard system using Redis
+title: How to build a Real-Time Leaderboard app Using Redis
+sidebar_label: How to build a Real-Time Leaderboard app Using Redis
 slug: /howtos/leaderboard
 ---
 ![My Image](leaderboard.png)
