--- a/docs/howtos/Popupstore/index-popupstore.mdx
+++ b/docs/howtos/Popupstore/index-popupstore.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-popupstore
-title: How to build Popup store using Redis
-sidebar_label: How to build Popup store using Redis
+title: How to build a Popup Store Using Redis
+sidebar_label: How to build a Popup Store Using Redis
 slug: /howtos/popupstore
 ---
