--- a/docs/howtos/Realtimeanalytics/index.realtimeanalytics.mdx
+++ b/docs/howtos/Realtimeanalytics/index.realtimeanalytics.mdx
@@ -1,6 +1,6 @@
 ---
 id: index-realtimeanalytics
-title: Real Time Analytics
-sidebar_label: Real Time Analytics
+title: How to build a Real Time Analytics using Redis
+sidebar_label: How to build a Real Time Analytics using Redis
 slug: /howtos/realtimeanalytics
 ---
