--- a/docs/howtos/Shoppingcart/index-shoppingcart.mdx
+++ b/docs/howtos/Shoppingcart/index-shoppingcart.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-shoppingcart
-title: How to build Shopping cart app using Redis
-sidebar_label: How to build Shopping cart app using  Redis
+title: How to build a Shopping cart app using NodeJS and RedisJSON
+sidebar_label: How to build a Shopping cart app using NodeJS and RedisJSON
 slug: /howtos/shoppingcart
 ---
 import Tabs from '@theme/Tabs';
