Fixed the links

--- a/docs/howtos/Leaderboard/index-leaderboard.mdx
+++ b/docs/howtos/Leaderboard/index-leaderboard.mdx
@@ -18,7 +18,7 @@ git clone https://github.com/redis-developer/basic-redis-leaderboard-demo-java
 ```
 
 
-## 3. Run docker compose or install redis manually
+## 3. Run docker compose 
 
 ```
 docker network create global
