--- a/docs/develop/python/index-python.mdx
+++ b/docs/develop/python/index-python.mdx
@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 import useBaseUrl from '@docusaurus/useBaseUrl';
 import RedisCard from '@site/src/theme/RedisCard';
 
-Find tutorials, Examples and Technical articles that will help you to develop with Redis and Python.
+Find tutorials, examples and technical articles that will help you to develop with Redis and Python.
 
 ## Getting Started
 
