Added Caching Demo app

--- a/docs/howtos/caching/index-caching.mdx
+++ b/docs/howtos/caching/index-caching.mdx
@@ -51,4 +51,6 @@ yarn
 yarn start
 ```
 
+Open up https://localhost:8081 and you can see a basic caching demo application up and running.
+
 ![My Image](cachingdemo.png)
