--- a/docs/howtos/shoppingcart/index-shoppingcart.mdx
+++ b/docs/howtos/shoppingcart/index-shoppingcart.mdx
@@ -165,6 +165,6 @@ $ npm run serve
 * Cart: `HGETALL cart:{cartId}`to get quantity of products and `JSON.GET product:{productId}` to get products data.  
 
 
-References:
+Reference:
 
 - [Source code](https://github.com/redis-developer/basic-redis-shopping-chart-nodejs)
