Added Caching demo

--- a/docs/howtos/caching/index-caching.mdx
+++ b/docs/howtos/caching/index-caching.mdx
@@ -15,6 +15,8 @@ import RedisCard from '@site/src/theme/RedisCard';
 This app returns the number of repositories a Github account has. When you first search for an account, the server calls Github's API to return the response. This can take some time. The server then adds the details of this slow response to Redis for future requests. When you search again, the next response comes directly from Redis cache instead of calling Github. The responses become much faster.
 
 
+## Pre-requisite
+
 ## 1. Install NodeJS
 
 ```
@@ -22,7 +24,7 @@ brew install node
 ```
 
 
-## 2. Run these commands:
+## 2. Clone the repository
 
 ```
 git clone https://github.com/redis-developer/basic-caching-demo-nodejs
