Fixed the heading

--- a/docs/howtos/caching/index-caching.mdx
+++ b/docs/howtos/caching/index-caching.mdx
@@ -1,7 +1,7 @@
 ---
 id: index-caching
-title: How to build a Basic Caching Demo app Using NodeJS  & Redis
-sidebar_label: How to build a Basic Caching Demo app Using NodeJS & Redis
+title: How to cache REST API responses Using Redis & NodeJS
+sidebar_label: How to cache REST API responses Using Redis & NodeJS
 slug: /howtos/caching
 ---
 
