--- a/docs/howtos/caching/index-caching.mdx
+++ b/docs/howtos/caching/index-caching.mdx
@@ -17,20 +17,20 @@ This app returns the number of repositories a Github account has. When you first
 
 ## Pre-requisite
 
-## 1. Install NodeJS
+### 1. Install NodeJS
 
 ```
 brew install node
 ```
 
 
-## 2. Clone the repository
+### 2. Clone the repository
 
 ```
 git clone https://github.com/redis-developer/basic-caching-demo-nodejs
 ```
 
-## 3. Copy .env.sample to create .env
+### 3. Copy .env.sample to create .env
 
 
 ```
@@ -38,7 +38,7 @@ git clone https://github.com/redis-developer/basic-caching-demo-nodejs
 - REDIS_PASSWORD: Password to the server
 ```
 
-## 4. Run frontend
+### 4. Run frontend
 
 ```
 cd client
@@ -46,7 +46,7 @@ yarn
 yarn serve
 ```
 
-## 5. Run backend
+### 5. Run backend
 
 ```
 yarn
