--- a/docs/howtos/ratelimiting/index-ratelimiting.mdx
+++ b/docs/howtos/ratelimiting/index-ratelimiting.mdx
@@ -141,7 +141,7 @@ docker network create global
 docker-compose up -d --build
 ```
 
-### If you install redis manually open src/main/resources/ folder and provide the values for environment variables in application.properties
+If you install redis manually open src/main/resources/ folder and provide the values for environment variables in application.properties
     spring.redis.database=
     spring.redis.host=
     spring.redis.port=
