--- a/docs/howtos/leaderboard/index-leaderboard.mdx
+++ b/docs/howtos/leaderboard/index-leaderboard.mdx
@@ -6,26 +6,26 @@ slug: /howtos/leaderboard
 ---
 ![My Image](leaderboard.png)
 
-## 1. Install the below software 
+### 1. Install the below software 
 
 - Docker (on mac: https://docs.docker.com/docker-for-mac/install/)
 - Docker Compose
 
-## 2. Clone the repository
+### 2. Clone the repository
 
 ```
 git clone https://github.com/redis-developer/basic-redis-leaderboard-demo-java 
 ```
 
 
-## 3. Run docker compose 
+### 3. Run docker compose 
 
 ```
 docker network create global
 docker-compose up -d --build
 ```
 
-## 4. Verifying if containers are up and running
+### 4. Verifying if containers are up and running
 
 ```
  docker-compose ps
@@ -34,7 +34,9 @@ docker-compose up -d --build
 redis.redisleaderboard.docker   docker-entrypoint.sh redis ...   Up      127.0.0.1:55000->6379/tcp
 ```
 
-## 5. Copy .env.example to create .env (copy .env.example .env or cp .env.example .env) . And provide the values for environment variables (if needed)
+### 5. Copy .env.example to create .env 
+
+Provide the values for environment variables (if needed)
 
 ```
 - REDIS_URL: Redis database endpoint URL
@@ -55,7 +57,7 @@ REDIS_PASSWORD=
 REDIS_DB=
 ```
 
-## 6. Run backend
+### 6. Run backend
 
 - Install gradle 
 
@@ -73,7 +75,7 @@ Follow the following link https://docs.oracle.com/javase/10/install/installation
 export $(cat .env | xargs)
 ```
 
-## 7 Running the wrapper task
+### 7 Running the wrapper task
 
 To use Wrapper, we need to generate some particular files. We'll generate these files using the built-in Gradle task called wrapper. 
 Note that we need to generate these files only once.
@@ -104,7 +106,7 @@ BUILD SUCCESSFUL in 29s
 1 actionable task: 1 executed
 ```
 
-## 8 Performing the build task
+### 8 Performing the build task
 
 The Gradle Wrapper is now available for building your project. It's time to run the wrapper script to perform the build task.
 
@@ -122,7 +124,7 @@ BUILD SUCCESSFUL in 1m 13s
 12 actionable tasks: 12 executed
 ```
 
-## 9 Running your application
+### 9 Running your application
 
 ```
 ./gradlew run
