--- a/docs/create/cloud/index-cloud.mdx
+++ b/docs/create/cloud/index-cloud.mdx
@@ -44,3 +44,8 @@ slug: /create/cloud/
 ![My Image](images/activate.png)
 
 
+## Next Steps
+
+- [Connecting to the database using RedisInsight](/explore/redisinsight/)
+- [How to list & search Movies database using Redisearch](/howtos/moviesdatabase/getting-started/)
+
