--- a/docs/create/docker/index-docker.mdx
+++ b/docs/create/docker/index-docker.mdx
@@ -159,3 +159,7 @@ If persistence is enabled, data is stored in the VOLUME /data, which can be used
   
 </Tabs>
 
+## Next Step
+
+- [Connect to Redis database using RedisInsight](/explore/redisinsight)
+- [Connect to Redis database using Redis datasource for Grafana](/explore/redisdatasource)
